kubernetes_updated/postgres.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  namespace: school-system
  labels:
    app: postgres
spec:
  replicas: 1
  selector:          # here selector defines which pods belongs to deployment
    matchLabels:
      app: postgres
  template: # main part eidai bluerpint for pods has own metadata and spec section
    metadata:
      labels:                         # pods label field is required
        app: postgres                 # app = key : postgres = value - standard to use app as key but we could use custom key name
    spec:
      containers:
      - name: postgres-kube
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data      
      volumes:
      - name: postgres-storage
        persistentVolumeClaim:
          claimName: postgres-pvc
---

apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: school-system
spec:
  # type: ClusterIP # set na korle eita default
  selector:     #in service this select pods to forward the requests to
    app: postgres  # here it uses labels to forward request to pods of a service
  ports:
    - protocol: TCP
      port: 5432   # service port
      targetPort: 5432  # target port must match to container port (pods)
